--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,9 @@ repositories {
 dependencies {
 
 testCompile group: 'org.testng', name: 'testng', version: '6.11'
-compile group: 'org.seleniumhq.selenium', name: 'selenium-server', version: '3.4.0'
-compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.4.0'
+compile group: 'org.seleniumhq.selenium', name: 'selenium-server', version: '3.6.0'
+compile group: 'org.seleniumhq.selenium', name: 'selenium-server-standalone', version: '2.53.0'
+compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.6.0'
 testCompile group: 'org.hamcrest', name: 'java-hamcrest', version: '2.0.0.0'
-compile group: 'io.appium', name: 'java-client', version: '4.1.2'
+compile group: 'io.appium', name: 'java-client', version: '5.0.4'
 }
